--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
                         </div>
                         <div class="publication-image">
                             <div class="image-placeholder">
-                                <img src="ENAL_2025_Poster.png" alt="ENAL 2025 image" class="publication-image" draggable="false" oncontextmenu="return false;" onselectstart="return false;" ondragstart="return false;">
+                                <img src="ENAL_2025_Poster.PNG" alt="ENAL 2025 image" class="publication-image" draggable="false" oncontextmenu="return false;" onselectstart="return false;" ondragstart="return false;">
                             </div>
                         </div>
                     </div>
@@ -687,7 +687,7 @@
                         </div>
                         <div class="publication-image">
                             <div class="image-placeholder">
-                                <img src="ARO_2025_Poster.png" alt="ARO 2025 image" class="publication-image" draggable="false" oncontextmenu="return false;" onselectstart="return false;" ondragstart="return false;">
+                                <img src="ARO_2025_Poster.PNG" alt="ARO 2025 image" class="publication-image" draggable="false" oncontextmenu="return false;" onselectstart="return false;" ondragstart="return false;">
                             </div>
                         </div>
                     </div>
