--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
             padding: 10px;
         }
 
+        @keyframes slideInFromRight {
+            from {
+                transform: translateX(100vw);
+            }
+            to {
+                transform: translateX(0);
+            }
+        }
+        
         .logo-image {
             max-width: 200px;
             height: auto;
@@ -61,6 +70,8 @@
             -webkit-user-drag: none;
             -webkit-touch-callout: none;
             -webkit-tap-highlight-color: transparent;
+            animation: slideInFromRight 1s cubic-bezier(0.37, 0, 0.63, 1);
+            animation-fill-mode: forwards;
         }
 
         .header-content h1 {
