--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             width: 160px;
             height: 184px;
             background-color: #f8f8f8;
-            border: 2px dashed #cccccc;
+            border: 2px #cccccc;
             border-radius: 8px;
             display: flex;
             align-items: center;
@@ -218,7 +218,7 @@
             width: 200px;
             height: 133px;
             background-color: #f8f8f8;
-            border: 2px dashed #cccccc;
+            border: 2px #cccccc;
             border-radius: 8px;
             display: flex;
             align-items: center;
@@ -509,6 +509,8 @@
 
             .header-content h1 {
                 font-size: 1.8em;
+                line-height: 1.1;
+                margin-bottom: 10px;
             }
 
             .header-content p {
