--- a/index.html
+++ b/index.html
@@ -468,6 +468,8 @@
 
             .header-content h1 {
                 font-size: 2em;
+                line-height: 1.1;
+                margin-bottom: 10px
             }
 
             .contact-links {
