--- a/index.html
+++ b/index.html
@@ -526,6 +526,11 @@
                 font-size: 1.5em;
             }
 
+            .publications-title {
+                line-height: 1.1;
+                font-size: 1.4em;
+            }
+
             .research-skills-list {
                 grid-template-columns: 1fr;
                 gap: 15px;
