--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
             </section>
 
             <section class="publications-section">
-                <h2>Recent Publications and Presentations</h2>
+                <h2 class="publications-title">Recent Publications and Presentations</h2>
                 <div class="publications-list">
                     <div class="publication-item">
                         <div class="publication-content">
