--- a/sci_vis_survey_page.html
+++ b/sci_vis_survey_page.html
@@ -267,7 +267,7 @@
         <div class="header-section">
     <h2 class="subheading">Who Participated?</h2>
         <p class="description">
-            29 researchers took part, including individuals from academia and industry. Roles included PhD students, postdocs, faculty, and professional researchers.
+            29 researchers took part, including individuals from academia and industry. Roles included PhD students, postdocs, faculty, and professional researchers. Most participants conduct research in biology, neuroscience, and psychology-related fields.
         </p>
 
         <h2 class="subheading">What Did We Ask?</h2>
